@@ -188,7 +188,12 @@
                      <xsl:attribute name="zcd">2</xsl:attribute> 
                    </xsl:if>
 
-                   <xsl:attribute name="vod"/>               
+                   <xsl:attribute name="vod"/>
+
+                   <xsl:if test="//movie/prebuf != '-1'">
+                       <xsl:attribute name="prebuf"><xsl:value-of select="//movie/prebuf" /></xsl:attribute>
+                   </xsl:if>
+
                    <img src="pictures/play.png" onfocussrc="pictures/play_selected.png"/>
                  </a>
                 </center>
@@ -229,6 +234,10 @@
 
                      <xsl:attribute name="vod"/>
 
+                     <xsl:if test="//movie/prebuf != '-1'">
+                       <xsl:attribute name="prebuf"><xsl:value-of select="//movie/prebuf" /></xsl:attribute>
+                     </xsl:if>
+
                      <xsl:if test="position() = 1"> 
                          <xsl:attribute name="class">firstMovie</xsl:attribute> 
                      </xsl:if>
@@ -257,6 +266,9 @@
                    <a class="link">
                        <xsl:attribute name="href"><xsl:value-of select="concat(/details/movie/baseFilename,'.playlist.jsp')" /></xsl:attribute>
                        <xsl:attribute name="vod">playlist</xsl:attribute>
+                       <xsl:if test="//movie/prebuf != '-1'">
+                           <xsl:attribute name="prebuf"><xsl:value-of select="//movie/prebuf" /></xsl:attribute>
+                       </xsl:if>
                      <xsl:text>&#160;</xsl:text>
                      לכה ןגנ
                      <img src="pictures/play_small.png" onfocussrc="pictures/play_selected_small.png" align="top"/>
@@ -297,6 +309,9 @@
                      </xsl:if>
 
                      <xsl:attribute name="vod"/>
+                     <xsl:if test="//movie/prebuf != '-1'">
+                       <xsl:attribute name="prebuf"><xsl:value-of select="//movie/prebuf" /></xsl:attribute>
+                     </xsl:if>
                      <img src="pictures/play_small.png" onfocussrc="pictures/play_selected_small.png" align="top">
                        <xsl:attribute name="onmouseover">this.src='pictures/play_selected_small.png';</xsl:attribute>
                        <xsl:attribute name="onmouseout">this.src='pictures/play_small.png';</xsl:attribute>
